--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,6 +15,19 @@
 				"kind": "build",
 				"isDefault": true
 			}
+		},
+		{
+			"type": "npm",
+			"script": "assable",
+			"label": "assable",
+			"detail": "Build and package the extension",
+			"presentation": {
+				"reveal": "never"
+			},
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			}
 		}
 	]
 }
